[package]
name = "lamport_clock"
version = "0.1.0"
authors = ["Sanket Kulthe <sanketpr@buffalo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
nanoid = "0.4.0"
nats = "0.11.0"
once_cell = "1.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["full"] }
warp = "0.3.1"
